--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -45,7 +45,7 @@ jobs:
     name: Build e Push Docker
     runs-on: ubuntu-latest
     needs: validate
-    if: github.event_name == 'push'
+    if: github.event_name == 'push' || github.event_name == 'workflow_dispatch'
 
     steps:
       - name: Checkout código
@@ -72,11 +72,11 @@ jobs:
           cache-from: type=registry,ref=${{ env.DOCKER_REGISTRY }}/${{ env.IMAGE_NAME }}:latest
           cache-to: type=inline
 
-  deploy:
-    name: Deploy no Kubernetes
+  deploy-k8s:
+    name: Deploy no Kubernetes (Principal)
     runs-on: ubuntu-latest
     needs: build
-    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+    if: (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master') && (github.event_name == 'push' || github.event_name == 'workflow_dispatch')
     environment: production
 
     steps:
@@ -132,4 +132,30 @@ jobs:
           echo ""
           echo "=== Ingress ==="
           kubectl get ingress -n ${{ env.K8S_NAMESPACE }}
+
+  deploy-docker:
+    name: Deploy no Docker (Servidor Secundário)
+    runs-on: ubuntu-latest
+    needs: build
+    if: (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master') && (github.event_name == 'push' || github.event_name == 'workflow_dispatch')
+    environment: production
+
+    steps:
+      - name: Executar Deploy via SSH
+        uses: appleboy/ssh-action@v1.0.3
+        with:
+          host: ${{ secrets.DOCKER_SERVER_HOST }}
+          username: ${{ secrets.DOCKER_SERVER_USER }}
+          key: ${{ secrets.DOCKER_SERVER_SSH_KEY }}
+          password: ${{ secrets.DOCKER_SERVER_PASSWORD }} # Opcional: use se não tiver chave SSH
+          script: |
+            docker pull ${{ env.DOCKER_REGISTRY }}/${{ env.IMAGE_NAME }}:latest
+            docker stop ${{ env.IMAGE_NAME }} || true
+            docker rm ${{ env.IMAGE_NAME }} || true
+            docker run -d \
+              --name ${{ env.IMAGE_NAME }} \
+              --restart always \
+              -p 3000:3000 \
+              ${{ env.DOCKER_REGISTRY }}/${{ env.IMAGE_NAME }}:latest
+
 
