implementação de email

--- a/infra/k8s/secrets.example.yaml
+++ b/infra/k8s/secrets.example.yaml
@@ -8,3 +8,7 @@ metadata:
 type: Opaque
 stringData:
   APP_SECRET: "COLOQUE_SEU_SEGREDO_FORTE_AQUI"
+  # Credenciais do CRM PHD (dados sensíveis)
+  CRM_ADMIN_EMAIL: "admin@hajir"
+  CRM_ADMIN_PASSWORD: "admin123"
+  RESEND_API_KEY: "re_xxxxxxxx"
