--- a/infra/k8s/secrets.yaml
+++ b/infra/k8s/secrets.yaml
@@ -7,4 +7,9 @@ type: Opaque
 stringData:
   # Segredo de aplicação (exemplo forte - recomendo trocar em produção)
   APP_SECRET: "pH7G!tY9qL2@wR5zC8#nV1bK4^xM6sD3?jP0fQ7uT9yW2"
+  # Credenciais do CRM PHD (trocar em produção!)
+  CRM_ADMIN_EMAIL: "admin@hajir"
+  CRM_ADMIN_PASSWORD: "admin123"
+  # Chave da API Resend (obter em resend.com)
+  RESEND_API_KEY: "re_placeholder_trocar_em_producao"
 
