--- a/minikube/secrets.yaml
+++ b/minikube/secrets.yaml
@@ -8,3 +8,6 @@ metadata:
 type: Opaque
 stringData:
   APP_SECRET: "dev-local-minikube-secret-change-in-prod"
+  CRM_ADMIN_EMAIL: "admin@hajir"
+  CRM_ADMIN_PASSWORD: "admin123"
+  RESEND_API_KEY: "re_dev_placeholder"
