--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -106,6 +106,10 @@ jobs:
         run: |
           kubectl apply -f infra/k8s/namespace.yaml
 
+      - name: Aplicar ConfigMap de contato (formulário + CRM)
+        run: |
+          kubectl apply -f infra/k8s/contact-config.yaml -n ${{ env.K8S_NAMESPACE }}
+
       - name: Aplicar Certificate
         run: |
           kubectl apply -f infra/k8s/certificate.yaml -n ${{ env.K8S_NAMESPACE }}
