--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "build": "NODE_ENV=production next build",
     "start": "next start",
     "lint": "next lint",
+    "test": "vitest",
+    "test:run": "vitest run",
+    "test:api": "tsx scripts/test-crm-api.ts",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
@@ -51,6 +54,7 @@
     "react-dom": "^19.2.1",
     "react-hook-form": "^7.54.2",
     "recharts": "^2.15.1",
+    "resend": "^4.5.0",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.2"
@@ -61,6 +65,7 @@
     "@types/react-dom": "^19.2.1",
     "genkit-cli": "^1.20.0",
     "postcss": "^8",
+    "vitest": "^3.0.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
