--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -156,13 +156,14 @@ jobs:
           CRM_USER_ID: ${{ secrets.CRM_USER_ID }}
           CRM_ADMIN_EMAIL: ${{ secrets.CRM_ADMIN_EMAIL }}
           CRM_ADMIN_PASSWORD: ${{ secrets.CRM_ADMIN_PASSWORD }}
+          ENABLE_CRM: ${{ secrets.ENABLE_CRM }}
           DOCKER_NETWORK: ${{ secrets.DOCKER_NETWORK }}
         with:
           host: ${{ secrets.DOCKER_SERVER_HOST }}
           username: ${{ secrets.DOCKER_SERVER_USER }}
           key: ${{ secrets.DOCKER_SERVER_SSH_KEY }}
           password: ${{ secrets.DOCKER_SERVER_PASSWORD }}
-          envs: RESEND_API_KEY,RESEND_FROM_EMAIL,NOTIFICATION_EMAIL,CRM_BASE_URL,CRM_TENANT_SLUG,CRM_USER_ID,CRM_ADMIN_EMAIL,CRM_ADMIN_PASSWORD,DOCKER_NETWORK
+          envs: RESEND_API_KEY,RESEND_FROM_EMAIL,NOTIFICATION_EMAIL,CRM_BASE_URL,CRM_TENANT_SLUG,CRM_USER_ID,CRM_ADMIN_EMAIL,CRM_ADMIN_PASSWORD,ENABLE_CRM,DOCKER_NETWORK
           script: |
             set -e
             echo "=== Pulling image ==="
@@ -187,6 +188,7 @@ jobs:
               -e "CRM_USER_ID=${CRM_USER_ID}" \
               -e "CRM_ADMIN_EMAIL=${CRM_ADMIN_EMAIL}" \
               -e "CRM_ADMIN_PASSWORD=${CRM_ADMIN_PASSWORD}" \
+              -e "ENABLE_CRM=${ENABLE_CRM:-false}" \
               ${{ env.DOCKER_REGISTRY }}/${{ env.IMAGE_NAME }}:latest
 
             echo "=== Container running ==="
