troca do resend

--- a/infra/k8s/secrets.yaml
+++ b/infra/k8s/secrets.yaml
@@ -10,6 +10,6 @@ stringData:
   # Credenciais do CRM PHD (trocar em produção!)
   CRM_ADMIN_EMAIL: "admin@hajir"
   CRM_ADMIN_PASSWORD: "admin123"
-  # Chave da API Resend (obter em resend.com)
-  RESEND_API_KEY: "re_placeholder_trocar_em_producao"
+  # Chave da API Web3Forms (obter em https://web3forms.com)
+  CONTACT_FORM_KEY: "web3forms_access_key_placeholder_trocar_em_producao"
 
